@@ -167,7 +167,7 @@ class Gem::SpecFetcher
 
       if all and @specs.include? source_uri then
         list[source_uri] = @specs[source_uri]
-      elsif @latest_specs.include? source_uri then
+      elsif not all and @latest_specs.include? source_uri then
         list[source_uri] = @latest_specs[source_uri]
       else
         specs = load_specs source_uri, file
@@ -181,6 +181,10 @@ class Gem::SpecFetcher
 
     list
   end
+
+  ##
+  # Loads specs in +file+, fetching from +source_uri+ if the on-disk cache is
+  # out of date.
 
   def load_specs(source_uri, file)
     file_name  = "#{file}.#{Gem.marshal_version}"
